--- a/src/app/components/pages/heroes/heroes.component.html
+++ b/src/app/components/pages/heroes/heroes.component.html
@@ -9,30 +9,36 @@
     </button>
   </div>
 </div>
-<table class="table mt-3">
-  <thead class="thead-dark">
-    <th>#</th>
-    <th>Nombre</th>
-    <th>Poder</th>
-    <th>Vivo</th>
-    <th>Tools</th>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>Superman</td>
-      <td>Dead</td>
-      <td>
-        <button class="btn btn-p">
+<div class="container" *ngIf="!loading">
+  <table class="table mt-3" *ngIf="heroes.length > 0">
+    <thead class="thead-dark">
+      <th>#</th>
+      <th>Nombre</th>
+      <th>Poder</th>
+      <th>Vivo</th>
+      <th>Tools</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let heroe of heroes; let i = index">
+        <td>{{ heroe.id }}</td>
+        <td>{{ heroe.nombre }}</td>
+        <td>{{ heroe.poder }}</td>
+        <td> {{ heroe.estado ? "Vivo" : "Muerto" }}</td>
+        <td >
+          <button class="btn btn-danger mr-2" type="button" (click)="eliminarHeroe( heroe )">
+             <i class="fa fa-trash"></i>
+          </button>
+          <button class="btn btn-warning" type="button" (click)="editarHeroe( heroe )">
+              <i class="fa fa-edit"></i>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
 
-
-<div class="alert alert-info text-center">
+<div *ngIf="loading" class="alert alert-info text-center mt-2">
     <h4>Cargando</h4>
     <p>
       <i class="fa fa-sync fa-spin fa-3x"></i>
@@ -41,7 +47,7 @@
 </div>
 
 
-<div class="alert alert-warning text-center">
+<div *ngIf="heroes.length == 0 && !loading" class="alert alert-warning text-center mt-1">
   <h4>No Hay Registros </h4>
   <p>
     <i class="fa fa-exclamation fa-3x"></i>
