--- a/src/app/components/pages/heroes/heroes.component.html
+++ b/src/app/components/pages/heroes/heroes.component.html
@@ -9,7 +9,13 @@
     </button>
   </div>
 </div>
-<div class="container" *ngIf="!loading">
+<div class="container mt-3" *ngIf="!loading">
+  <input type="text"
+         class="form-control"
+         placeholder="Buscar Heroe"
+         #heroe
+         (keyup)="buscarHeroe( heroe.value )"
+         >
   <table class="table mt-3" *ngIf="heroes.length > 0">
     <thead class="thead-dark">
       <th>#</th>
